# People-Detection-YOLOv8

./: .gitignore  ENVIRONMENT_SETUP.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py  start_project.bat  verify_environment.py
configs/: inference_config.yaml  training_config.yaml
docs/: API.md
scripts/: setup_project.py
tests/: __init__.py  test_data_processing.py  test_model_training.py
yolo_training/: convert_annotations.py  dataset.yaml  inference.py  train_yolo.py
yolo_training/data/: README.dataset.txt  README.roboflow.txt
yolo_training/data/test/: _annotations.csv
yolo_training/data/valid/: _annotations.csv
