[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "people-detection-yolov8"
version = "1.0.0"
description = "A complete YOLOv8 implementation for detecting people in images"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AsyrafNoorza"},
]
keywords = ["yolo", "object-detection", "computer-vision", "people-detection", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ultralytics>=8.0.196",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "opencv-python>=4.12.0",
    "Pillow>=11.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "jupyterlab>=3.0",
]

[project.scripts]
people-detection-train = "src.models.train:main"
people-detection-inference = "src.inference.predict:main"

[project.urls]
Homepage = "https://github.com/AsyrafNoorza/People-Detection-YOLOv8"
Repository = "https://github.com/AsyrafNoorza/People-Detection-YOLOv8"
Issues = "https://github.com/AsyrafNoorza/People-Detection-YOLOv8/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "cv2.*",
    "PIL.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
]
ignore_missing_imports = true
